# EmbedTemplate

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  arm-none-eabi.cmake
cmake/: arm-none-eabi.cmake  riscv-none-elf.cmake
common/: CMakeLists.txt
common/include/: fifo.h  log_marker.h  pack.h  term_codes.h  utils.h
common/include/arch/: arch_ops.h
common/include/cli/: cli.h
common/include/diagnostic/logging/: log.h
common/include/lib/libc/: assert.h  errno_.h  limits_.h  signal.h  stddef_.h  stdint_.h  stdio_.h  stdlib.h  termios.h  unistd.h
common/include/os/freertos/: FreeRTOSConfig.h
common/include/tests/: test_common.h  test_registry.h
common/src/: fifo.c  syscalls.c
common/src/arch/: arch_ops.c
common/src/cli/: README.md  cli_main.c  cli_no_sim.c  cli_no_test.c  cli_system.c  cli_test.c
common/src/cli/tests/: test_cli.c  test_cli.h
common/src/diagnostic/logging/: log_infra.c
common/src/diagnostic/logging/tests/: test_log.c  test_log.h
common/src/lib/libc/: arm_arch_time.c  assert.c  posix_time.c  signal.c  stdio.c  termios.c
common/src/os/freertos/: mock_interrupt.c
hw/rdl/: gpio_demo.rdl
port/: CMakeLists.txt  freertos_main.c  freertos_sim_main.c  posix_main.c
port/arm/stm32f4/: CMakeLists.txt  dwt.repl  port.c  run.resc  startup.c  stm32f4.ld  syscalls.c  time.c
port/riscv/gd32vf103/: CMakeLists.txt  freertos_risc_v_chip_specific_extensions.h  gd32vf103.ld  gd32vf103.repl  gd32vf103_nano.ld  gd32vf103_pico.ld  port.c  run.resc  startup.c  time.c
src/drivers/: CMakeLists.txt
src/drivers/gpio/: gpio.c
src/drivers/gpio/tests/: test_gpio.c  test_gpio.h
src/drivers/include/: block_id.h  gpio.h  uart.h
src/drivers/include/regs/: gpio_demo_regs.h
src/drivers/sysctrl/tests/: test_sysctrl.c  test_sysctrl.h
src/drivers/timer/tests/: test_timer.c  test_timer.h
src/drivers/uart/tests/: test_uart.c  test_uart.h
src/testhub/: CMakeLists.txt  dev_test_registry.c  sys_test_registry.c  test_registry_priv.h
